# beta-spray

./: .env-select.toml  .env.example  .flake8  .gitignore  .python-version  LICENSE  README.md  TODO.md  dev.py  dev.sh  docker-compose.yml  nuke.sh  shell.nix
.github/workflows/: build-deploy.yml  build.yml  deploy.yml  test.yml
api/: .dockerignore  .flake8  Dockerfile  m.sh  prd.Dockerfile  pyproject.toml
api/scripts/: backup.sh  cmd.sh  cmd_dev.sh  cmd_prd.sh  db.sh  load_prd.sh
api/src/: manage.py  schema.graphql
api/src/beta_spray/: asgi.py  settings.py  urls.py  wsgi.py
api/src/beta_spray/settings/: settings.py  settings_dev.py  settings_local_backup.py  settings_prd.py
api/src/bs_auth/: admin.py  apps.py  backends.py  models.py  pipeline.py
api/src/bs_auth/migrations/: 0001_initial.py
api/src/core/: admin.py  apps.py  directives.py  fields.py  middleware.py  models.py  permissions.py  pipeline.py  query.py  queryset.py  schema.py  util.py  views.py
api/src/core/fixtures/: basic.json  dump1.json
api/src/core/management/commands/: anonymize.py  makeholds.py  prune_boulders.py
api/src/core/migrations/: 0001_initial.py  0002_boulderimage_name_alter_beta_name_alter_problem_name.py  0003_rename_boulderimage_boulder_and_more.py  0004_alter_betamove_options_alter_problem_options.py  0005_alter_betamove_order.py  0006_alter_betamove_order.py  0007_alter_beta_name_alter_problem_name.py  0008_betamove_annotation.py  0009_remove_hold_position_x_remove_hold_position_y_and_more.py  0010_problem_external_link.py  0011_hold_annotation.py  0012_alter_betamove_order.py  0013_betamove_is_start_alter_betamove_hold_and_more.py  0014_beta_owner_problem_owner_problem_visibility.py  0015_alter_problem_visibility.py  0016_remove_hold_boulder_remove_problem_holds_and_more.py  0017_betamove_hold_position_mutually_exclusive.py  0018_hold_kind_hold_orientation.py
api/src/core/schema/: __init__.py  extensions.py  mutation.py  query.py
api/src/core/schema/mutation/: __init__.py  beta.py  beta_move.py  betamove.py  boulder.py  hold.py  position.py  problem.py  problem_hold.py  problemhold.py
api/src/core/tests/: conftest.py  factories.py
api/src/core/tests/models/: test_beta_move.py
api/src/core/tests/schema/: conftest.py
api/src/core/tests/schema/mutation/: test_mutate_beta_move.py  test_mutate_hold.py  test_mutate_user.py
api/src/core/tests/schema/query/: test_current_user.py  test_problem.py  test_query_problem.py  test_query_user.py  test_user.py
deploy/: README.md  deploy.sh
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: api.yml  backup.yml  database-backup.yml  db.yml  ingress.yml  migration.yml  secrets.yml
deploy/scripts/: deploy.sh  secrets.sh  upload_static.sh
deploy/terraform/: README.md  backend.tf  dns.tf  gke.tf  outputs.tf  storage.tf  terraform.tfvars  versions.tf  vpc.tf
deploy/terraform/app/: .terraform.lock.hcl  README.md  backend.tf  helm.tf  outputs.tf  providers.tf  sa.tf  storage.tf  tls.tf  variables.tf
deploy/terraform/ci/: .terraform.lock.hcl  README.md  backend.tf  oidc.tf  outputs.tf  providers.tf  secrets.tf  storage.tf  variables.tf  versions.tf
deploy/terraform/core/: .terraform.lock.hcl  backend.tf  github.tf  iam.tf  oidc.tf  outputs.tf  providers.tf  repository.tf  secrets.tf  variables.tf
deploy/terraform/deploy/: .terraform.lock.hcl  README.md  backend.tf  helm.tf  providers.tf  sa.tf  variables.tf
deploy/terraform/deployment/: .terraform.lock.hcl  README.md  backend.tf  dns.tf  gke.tf  outputs.tf  sa.tf  variables.tf  versions.tf  vpc.tf
deploy/terraform/env/: .terraform.lock.hcl  backend.tf  development.tfvars  dns.tf  github.tf  outputs.tf  production.tfvars  providers.tf  remote.tf  sa.tf  storage.tf  tls.tf  variables.tf
deploy/terraform/gke/: .terraform.lock.hcl  README.md  gke.tf  outputs.tf  providers.tf  sa.tf  storage.tf  variables.tf
deploy/terraform/server/: .terraform.lock.hcl  backend.tf  dns.tf  outputs.tf  providers.tf  variables.tf
node-api/: .eslintignore  .eslintrc.js  Dockerfile  package-lock.json  package.json  schema.graphql  schema.prisma  tsconfig.json
node-api/src/: index.ts
node-api/src/graphql/: schema.ts  types.ts
rust-api/: .env  Cargo.toml  Dockerfile  beta_spray.toml  rust-toolchain.toml  schema.graphql
rust-api/entity/: Cargo.toml
rust-api/entity/src/: beta.rs  beta_move.rs  boulder.rs  hold.rs  lib.rs  prelude.rs  problem.rs  problem_hold.rs
rust-api/migration/: Cargo.toml
rust-api/migration/src/: lib.rs  m20220613_000001_init.rs
rust-api/migrations/: 20220614105935_initial.down.sql  20220614105935_initial.up.sql
rust-api/src/: config.rs  main.rs  util.rs
rust-api/src/graphql/: mod.rs  query.rs
rust-api/src/graphql/query/: mod.rs
ui/: .babelrc.json  .dockerignore  .eslintignore  .eslintrc.js  Dockerfile  README.md  jest.config.js  next.config.js  package-lock.json  package.json  prd.Dockerfile  relay.config.js  schema.graphql  tsconfig.json  webpack.config.js
ui/graphql/: schema.graphql
ui/public/: index.html
ui/scripts/: cmd.sh  favicon.sh  polygons.py
ui/src/: App.tsx  global.d.ts  index.tsx  palette.scss  relay.d.ts  types.d.ts
ui/src/assets/: index.tsx
ui/src/components/: About.tsx  AboutPage.tsx  AllRoutes.tsx  BoulderImage.tsx  BoulderImageCard.tsx  BoulderImageLoader.tsx  BoulderImageUpload.tsx  CoreContent.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  Footer.tsx  HeaderBar.tsx  Home.tsx  Hydrate.tsx  Loading.tsx  Logo.tsx  MutationError.tsx  NotFound.tsx  PageLayout.tsx  ProblemCard.tsx  UserQueryProvider.tsx  Why.tsx  icons.tsx
ui/src/context/: EditorContext.ts  (+1 more)
(+278 files in other folders)
