[tool.poetry]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = ""
license = "MIT"
name = "beta-spray"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.0.3"
Pillow = "^9.4.0"
django-dbbackup = "^4.0.2"
django-debug-toolbar = "^3.5.0"
django-extensions = "^3.1.5"
django-guest-user = "^0.5.3"
django-storages = {extras = ["google"], version = "^1.12.3"}
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
python = "^3.10"
random-username = "^1.0.2"
rules = "^3.3"
social-auth-app-django = "^5.0.0"
strawberry-django-plus = "^2.1.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.6"
flake8-black = "0.3.6"
flake8-isort = "^6.0.0"
mypy = "^1.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
profile = "black"
skip_gitignore = true

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
files = ["src/"]
ignore_missing_imports = true
plugins = "strawberry.ext.mypy_plugin"
