[tool.poetry]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = ""
license = "MIT"
name = "beta-spray"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.0.3"
Pillow = "^9.4.0"
django-dbbackup = "^4.0.2"
django-debug-toolbar = "^3.5.0"
django-extensions = "^3.1.5"
django-storages = {extras = ["google"], version = "^1.12.3"}
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
python = "^3.10"
random-username = "^1.0.2"
rules = "^3.3"
social-auth-app-django = "^5.0.0"
strawberry-graphql-django = "^0.14.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
debugpy = "^1.6.6"
factory-boy = "^3.2.1"
mypy = "^1.0.1"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"
pytest-mock = "^3.11.1"
ruff = "^0.0.275"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 80

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
files = ["src/"]
ignore_missing_imports = true
plugins = "strawberry.ext.mypy_plugin"

[tool.ruff]
exclude = [".venv/"]
fixable = ["E", "F", "I"]
line-length = 80
select = ["E", "F", "I"]
src = ["src/"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "beta_spray.settings.settings_dev"
filterwarnings = [
  # These are from internal strawberry code
  "ignore:Argument name-based matching*:DeprecationWarning",
]
python_files = ["test_*.py"]
