[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
edition = "2021"
name = "beta-spray-api"
publish = false
version = "0.1.0"

[dependencies]
sqlx = {version = "^0.5.13", features = ["runtime-tokio-rustls", "postgres", "time", "macros", "migrate"]}
tokio = {version = "^1.19.2", features = ["macros"]}
