[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
edition = "2021"
name = "beta-spray-api"
publish = false
version = "0.1.0"

[dependencies]
async-graphql = {version = "^4.0.2"}
async-graphql-axum = {version = "^4.0.2"}
axum = {version = "^0.5.7"}
sqlx = {version = "^0.5.13", features = ["runtime-tokio-rustls", "postgres", "time", "macros", "migrate"]}
tokio = {version = "^1.19.2", features = ["macros", "rt"]}
tower-http = {version = "^0.3.4", features = ["trace"]}
tracing = "^0.1.35"
tracing-subscriber = {version = "^0.3.11", features = ["env-filter"]}
